--- a/trunk/web/registrarempresa.xhtml
+++ b/trunk/web/registrarempresa.xhtml
@@ -41,18 +41,18 @@
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="razonsocial">Raz&oacute;n social:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="razonsocial" value="#{registraempresa.razonsocial}" required="true" validator="#{registraempresa.validarRazonSocial}"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="razonsocial" value="#{registraempresa.razonsocial}" required="true" validator="#{registraempresa.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorrazonsocial" for="razonsocial"></ice:message></div></td>
                                 </tr>
 
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel  for="direccion">Direcci&oacute;n:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="direccion" value="#{registraempresa.direccion}" required="true" validator="#{registraempresa.validarDireccion}"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="direccion" value="#{registraempresa.direccion}" required="true" validator="#{registraempresa.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errordireccion" for="direccion"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="localidad">Localidad:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="localidad" value="#{registraempresa.localidad}" required="true" validator="#{registraempresa.validarLocalidad}"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="localidad" value="#{registraempresa.localidad}" required="true" validator="#{registraempresa.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorlocalidad" for="localidad"></ice:message></div></td>
                                 </tr>
                                 <tr>
@@ -62,7 +62,7 @@
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="provincia">Provincia:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="provincia" value="#{registraempresa.provincia}" required="true" validator="#{registraempresa.validarProvincia}"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="provincia" value="#{registraempresa.provincia}" required="true" validator="#{registraempresa.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorprovincia" for="provincia"></ice:message></div></td>
                                 </tr>
                                 <tr>
@@ -99,48 +99,49 @@
                                 <tr><td colspan="2"><h1>Datos referidos al administrador de la empresa</h1></td></tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="nombre">Nombre:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="nombre" value="#"  required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="nombre" value="#{usuario.nombre}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errornombre" for="nombre"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="apellido1">Primer apellido:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="apellido1" value="#" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="apellido1"  value="#{usuario.apellido1}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorapellido1" for="apellido1"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="apellido2">Segundo apellido:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="apellido2" value="#"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="apellido2" value="#{usuario.apellido2}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorapellido2" for="apellido2"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="dni">DNI:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="dni" value="#" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="dni" value="#{usuario.dni}" required="true" validator="#{validaciones.validarNif}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errordni" for="dni"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="fechanacimiento">Fecha de nacimiento:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="fechanacimiento" value="#" required="true"></ice:inputText></div></td>
+                                    <ice:selectInputDate id="date1" value="#{dateSelect.date1}"></ice:selectInputDate>
+                                    <td><div class="inputslogin"><ice:inputText id="fechanacimiento" value="#{usuario.fechanacimiento}" required="true" validator="#{validaciones.validarFechaNacimiento}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorfechanacimiento" for="fechanacimiento"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="direccionusuario">Direcci&oacute;n:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="direccionusuario" value="#" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="direccionusuario" value="#{usuario.direccion}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errordireccionusuario" for="direccionusuario"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="localidadusuario">Localidad:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="localidadusuario" value="#{empresa.localidad}" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="localidadusuario" value="#{usuario.localidad}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorlocalidadusuario" for="localidadusuario"></ice:message></div></td>
                                 </tr>
 
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="codigopostalusuario">C&oacute;digo postal:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="codigopostalusuario" value="#{empresa.codigopostal}" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="codigopostalusuario" value="#{usuario.codigopostal}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorcodigopostalusuario" for="codigopostalusuario"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="provinciausuario">Provincia:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="provinciausuario" value="#{empresa.provincia}" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="provinciausuario" value="#{empresa.provincia}" required="true" validator="#{usuario.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorprivinciausuario" for="provinciausuario"></ice:message></div></td>
                                 </tr>
                                 <tr>
@@ -150,27 +151,27 @@
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="telefonousuario">Tel&eacute;fono:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="telefonousuario" value="#{empresa.telefono}" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="telefonousuario" value="#{usuario.telefono}" validator="#{validaciones.validarTelefono}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errortelefonousuario" for="telefonousuario"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="movil">Tel&eacute;fono m&oacute;vil:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="movil" value="#{empresa.fax}"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="movil" value="#{usuario.movil}" validator="#{validaciones.validarMovil}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errormovil" for="movil"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="emailusuario">Correo electr&oacute;nico:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="emailusuario" value="#{empresa.email}" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="emailusuario" value="#{usuario.email}" required="true" validator="#{validaciones.validarEmail}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="erroremailusuario" for="emailusuario"></ice:message></div></td>
                                 </tr>
                                 <tr>
                                     <td><div class="labelslogin"><ice:outputLabel for="cargo">Cargo:</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="cargo" value="#{empresa.email}" required="true"></ice:inputText></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="cargo" value="#{usuario.cargo}" required="true" validator="#{validaciones.validarCadena255}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorcargo" for="cargo"></ice:message></div></td>
                                 </tr>
                                 <tr>
-                                    <td><div class="labelslogin"><ice:outputLabel for="salario">Salario:(mensual)</ice:outputLabel></div></td>
-                                    <td><div class="inputslogin"><ice:inputText id="salario" value="#{empresa.email}" required="true"></ice:inputText></div></td>
+                                    <td><div class="labelslogin"><ice:outputLabel for="salario">Salario mensual:</ice:outputLabel></div></td>
+                                    <td><div class="inputslogin"><ice:inputText id="salario" value="#{usuario.salario}" required="true" validator="#{usuario.validarNumero}"></ice:inputText></div></td>
                                     <td><div class="errorformulario"><ice:message id="errorsalario" for="salario"></ice:message></div></td>
                                 </tr>
                                 <tr>
@@ -178,7 +179,7 @@
                                 </tr>
                                 <tr>
                                     <td colspan="2">
-                                        <ice:commandButton id="botondardealta" value="Dar de alta" action="#{login.compruebaLogin}"></ice:commandButton>
+                                        <ice:commandButton id="botondardealta" value="Dar de alta" action="#{registroempresa.compruebaResgistro}"></ice:commandButton>
                                     </td>
                                 </tr>
                             </table>
